--- a/Frontend/Emoticoach/src/app/tabs/tabs.page.scss
+++ b/Frontend/Emoticoach/src/app/tabs/tabs.page.scss
@@ -1,1 +1,8 @@
+ion-tab-bar {
+    --background: #833535 !important; 
+}
 
+ion-tab-button {
+    --color-focused: #ffffff !important;
+    --color-selected: #ffffff !important;
+}
