--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
@@ -1,3 +1,9 @@
+
+<ion-item-sliding>
+  <ion-item>
+   
+ 
+
 <ion-grid>
   <ion-row>
     <ion-col size="%5">
@@ -45,3 +51,8 @@
     </ion-col>
   </ion-row>
 </ion-grid>
+</ion-item>
+<ion-item-options>
+  <ion-item-option>Delete</ion-item-option>
+</ion-item-options>
+</ion-item-sliding>
