--- a/Frontend/Emoticoach/src/app/tabs/tabs.page.html
+++ b/Frontend/Emoticoach/src/app/tabs/tabs.page.html
@@ -8,7 +8,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="log">
-      <ion-icon src="/assets/icons/lifter-white.svg"><ion-icon></ion-icon></ion-icon>
+      <!-- <ion-icon src="/assets/icons/lifter-white.svg"><ion-icon></ion-icon></ion-icon> -->
+      <ion-icon name="document-text-outline"></ion-icon>
       <ion-label>Log</ion-label>
     </ion-tab-button>
 
