--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise.component.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise.component.html
@@ -8,9 +8,11 @@
         <ion-input [clearOnEdit]="true" placeholder="Excercise" [(ngModel)]="activity.name" (ionChange)="updateName()">
         </ion-input>
       </ion-col>
-      <ion-col>
+      <ion-col size="2">
         <ion-row>
+          
           <ion-select  [multiple]="true" [(ngModel)]="activity.muscleGroups">
+            Muscle Groups
             <div *ngFor="let muscle of muscleList">
               <ion-select-option [value]="muscle">{{muscle}}</ion-select-option>
             </div>
@@ -33,11 +35,7 @@
       </ion-col>
       <ion-col></ion-col>
       <ion-col>
-        <ion-button class="Delete" (click)="deleteSet()" fill="clear">
-          Delete Set
-          <ion-icon name="close-circle-outline"></ion-icon>
-        
-        </ion-button>
+       
       </ion-col>
     </ion-row>
     <ion-row>
