--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
@@ -1,9 +1,6 @@
 
 <ion-item-sliding>
-  <ion-item>
-   
- 
-
+<ion-item class="slide">
 <ion-grid>
   <ion-row>
     <ion-col size="%5">
@@ -13,9 +10,9 @@
     </ion-col>
     <ion-col>
       <ion-item lines="none">
-        <ion-icon size="small" name="repeat-outline"></ion-icon>
+        <ion-icon size="medium" name="repeat-outline"></ion-icon>
         <ion-input 
-          [clearOnEdit]="true" 
+          [clearOnEdit]="false" 
           type="number"
           min = "0"
           placeholder="Reps" 
@@ -26,9 +23,9 @@
     </ion-col>
     <ion-col>
       <ion-item lines="none">
-        <ion-icon size="small" name="barbell-outline"></ion-icon>
+        <ion-icon size="medium" name="barbell-outline"></ion-icon>
         <ion-input 
-          [clearOnEdit]="true" 
+          [clearOnEdit]="false" 
           type="number" 
           min = 0
           placeholder="Lbs" 
@@ -38,9 +35,9 @@
     </ion-col>
     <ion-col>
       <ion-item lines="none">
-        <ion-icon size="small" name="walk-outline"></ion-icon>
+        <ion-icon size="medium" name="walk-outline"></ion-icon>
         <ion-input 
-          [clearOnEdit]="true" 
+          [clearOnEdit]="false" 
           type="number"
           min = 0
           placeholder="RPE" 
@@ -53,6 +50,6 @@
 </ion-grid>
 </ion-item>
 <ion-item-options>
-  <ion-item-option>Delete</ion-item-option>
+  <ion-item-option (click)="deleteSet()">Delete</ion-item-option>
 </ion-item-options>
 </ion-item-sliding>
