--- a/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.scss
@@ -10,12 +10,14 @@ ion-modal {
       }
     }
 }
-
+ion-note {
+  color: #ffffff !important;
+}
 ion-content{
-  --background: #000000 !important;
+  --background: #323232 !important;
 }
 ion-item-divider {
-  background-color: #323232 !important;
+  background-color: #606060 !important;
 }
 ion-icon {
   font-size: 28px;
@@ -24,7 +26,7 @@ ion-icon {
 ion-item {
   --inner-padding-end: 2px;
   --inner-padding-start: 2px;
-  --background: "fff";
+  --background: #606060;
   --border-width: 0px;
   --padding-bottom: 0px;
   --padding-start: 0px;
@@ -32,13 +34,15 @@ ion-item {
   --padding-sop: 0px;
 }
 
-
-ion-button.redbutton {
-    --color: #833535;
-    --border-radius: 0;
-    --border-color: #833535;
-    --border-style: solid;
-    --border-width: 1px;
+ion-footer {
+  background: #323232;
+}
+ion-button.addExcercise {
+    --color: #ffffff;
+    --border-radius: 10px;
+    --border-color: #ffffff;
+    margin-right: 2% !important;
+    margin-left: 2% !important;
     --padding-top: 10px;
     --padding-bottom: 10px;
     height: 65px;
@@ -58,9 +62,13 @@ ion-card {
   margin: 0;
   margin-top: 2%;
   padding: 0 !important;
+  background-color: #606060 !important;
+  border-radius: 0px !important;
+}
+
+ion-list {
   background-color: #323232 !important;
 }
-  
 
 .label {
   color: #ffffff;
