153 feature delete activities from existing (#169)
* saving works

* removed badge from icon

* ton of style changes to home and workouts dashboard

* all actions for workouts are done and styling

--- a/Frontend/Emoticoach/src/global.scss
+++ b/Frontend/Emoticoach/src/global.scss
@@ -33,3 +33,16 @@
 ion-toolbar {
     --background: #833535;
   }
+
+ion-content {
+  // overwrite inline styles
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  --background: #323232;
+}
+
+
+ion-list {
+  background: #323232;
+}
