--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise.component.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise.component.html
@@ -1,38 +1,46 @@
-<ion-card>
-  <ion-card-header>
-    <ion-card-title>
-      <ion-grid>
+<div class="background">
+  <ion-button class="Delete" (click)="deleteActivity()" fill="clear" style="float: right;" >
+    <ion-icon name="close-circle-outline"></ion-icon>
+  </ion-button>
+  <ion-grid >
+    <ion-row>
+      <ion-col size="9">
+        <ion-input [clearOnEdit]="true" placeholder="Excercise" [(ngModel)]="activity.name" (ionChange)="updateName()">
+        </ion-input>
+      </ion-col>
+      <ion-col size="2">
         <ion-row>
-          <ion-col>
-            <ion-input [clearOnEdit]="true" placeholder="Excercise" [(ngModel)]="activity.name"
-              (ionChange)="updateName()">
-            </ion-input>
-          </ion-col>
-          <ion-col>
-            <ion-select [multiple]="true" [(ngModel)]="activity.muscleGroups">
-              <div *ngFor="let muscle of muscleList">
-                <ion-select-option [value]="muscle">{{muscle}}</ion-select-option>
-              </div>
-            </ion-select>
-          </ion-col>
+          
+          <ion-select  [multiple]="true" [(ngModel)]="activity.muscleGroups">
+            Muscle Groups
+            <div *ngFor="let muscle of muscleList">
+              <ion-select-option [value]="muscle">{{muscle}}</ion-select-option>
+            </div>
+          </ion-select>
         </ion-row>
-      </ion-grid>
-    </ion-card-title>
-  </ion-card-header>
+      </ion-col>
+    </ion-row>
 
-  <ion-card-content>
-    <app-exercise-set *ngFor="let set of activity.sets; index as i;" 
-        [activityIndex]="activityIndex" [set]="set"
+  
+      <app-exercise-set *ngFor="let set of activity.sets; index as i;" [activityIndex]="activityIndex" [set]="set"
         [setCount]="i+1">
-    </app-exercise-set>
+      </app-exercise-set>
+
     <ion-row>
       <ion-col>
-        <ion-button class="Delete" (click)="deleteSet()" fill="clear">Delete Set</ion-button>
+        <ion-button class="Add" (click)="addSet()" fill="clear">
+          <ion-icon slot="end" name="add-circle-outline"></ion-icon>
+          Add Set
+        </ion-button>
       </ion-col>
       <ion-col></ion-col>
       <ion-col>
-        <ion-button class="Add" (click)="addSet()" fill="clear">Add Set</ion-button>
+       
       </ion-col>
     </ion-row>
-  </ion-card-content>
-</ion-card>
+    <ion-row>
+      
+     
+    </ion-row>
+  </ion-grid>
+</div>
