--- a/Frontend/Emoticoach/src/app/tabs/tabs.page.html
+++ b/Frontend/Emoticoach/src/app/tabs/tabs.page.html
@@ -4,11 +4,12 @@
     <ion-tab-button tab="home">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>Today</ion-label>
-      <ion-badge>6</ion-badge>
+      <!-- <ion-badge>6</ion-badge> -->
     </ion-tab-button>
 
     <ion-tab-button tab="log">
-      <ion-icon src="/assets/icons/lifter-white.svg"><ion-icon></ion-icon></ion-icon>
+      <!-- <ion-icon src="/assets/icons/lifter-white.svg"><ion-icon></ion-icon></ion-icon> -->
+      <ion-icon name="document-text-outline"></ion-icon>
       <ion-label>Log</ion-label>
     </ion-tab-button>
 
