--- a/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.html
@@ -13,23 +13,23 @@
   </div>
 
   <!-- user date input goes here -->
-
-  <ion-list>
-    <ion-item>
-      <ion-label>
-        <ion-icon name="barbell-outline"></ion-icon>
-      </ion-label>
-      <ion-select 
-      interface="popover" 
-      placeholder="Select workout" 
-      [(ngModel)]="selectedWorkout"
-      (ionChange)="updateChart()">
-        <div *ngFor="let workout of workouts; let i = index">
-          <ion-select-option [value]="workout">{{workouts[i]}}</ion-select-option> 
-        </div>
-      </ion-select>
-    </ion-item>
-  </ion-list>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" offset="4.5">
+        <ion-item lines="none">
+          <ion-select 
+          interface="popover" 
+          placeholder="Select workout" 
+          [(ngModel)]="selectedWorkout"
+          (ionChange)="updateChart()">
+            <div *ngFor="let workout of workouts; let i = index">
+              <ion-select-option [value]="workout">{{workouts[i]}}</ion-select-option> 
+            </div>
+          </ion-select>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
 
