--- a/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.scss
@@ -1,4 +1,4 @@
-ion-label {
-    -webkit-flex: none!important; 
-    flex: none!important; 
+ion-select{
+    width: 400px;
+    text-align-last: center;
 }
