--- a/backend/webapp/templates/webapp/base.html
+++ b/backend/webapp/templates/webapp/base.html
@@ -84,6 +84,13 @@
                     <i class="fas fa-weight"></i>
                     <span>Weight</span></a>
             </li>
+
+            <!-- Nav Item - Water -->
+            <li class="nav-item">
+                <a class="nav-link" href="charts.html">
+                    <i class="fas fa-tint"></i>
+                    <span>Water</span></a>
+            </li>
             
             <!-- Divider -->
             <hr class="sidebar-divider">
@@ -107,6 +114,7 @@
                         <a class="collapse-item" href="register.html">Calories</a>
                         <a class="collapse-item" href="forgot-password.html">Sleep</a>
                         <a class="collapse-item" href="forgot-password.html">Weight</a>
+                        <a class="collapse-item" href="forgot-password.html">Water</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Live Charts</h6>
                         <a class="collapse-item" href="404.html">Heart Rate</a>
@@ -128,6 +136,7 @@
                         <a class="collapse-item" href="register.html">Calories</a>
                         <a class="collapse-item" href="forgot-password.html">Sleep</a>
                         <a class="collapse-item" href="forgot-password.html">Weight</a>
+                        <a class="collapse-item" href="forgot-password.html">Water</a>
                     </div>
                 </div>
             </li>
@@ -141,11 +150,11 @@
             </div>
 
             <!-- Sidebar Message -->
-            <div class="sidebar-card d-none d-lg-flex">
+            <!-- <div class="sidebar-card d-none d-lg-flex">
                 <img class="sidebar-card-illustration mb-2" src="{% static 'webapp/img/mindfulness.svg' %}" alt="...">
                 <p class="text-center mb-2"><strong>SB Admin Pro</strong> is packed with premium features, components, and more!</p>
                 <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Upgrade to Pro!</a>
-            </div>
+            </div> -->
 
         </ul>
         <!-- End of Sidebar -->
@@ -168,7 +177,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ first_name }} {{ last_name }}</span>
                                 <img class="img-profile rounded-circle"
                                     src="{% static 'webapp/img/undraw_profile.svg' %}">
                             </a>
