--- a/backend/website/templates/website/base.html
+++ b/backend/website/templates/website/base.html
@@ -29,6 +29,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'resources' %}">Resources</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'docs' %}">Documentation</a>
+                </li>
                 </ul>
             </div>
         </nav>
