Added date picker html (#179)
* test

* Added date picker html on graph pages

--- a/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.scss
@@ -2,3 +2,14 @@ ion-select{
     width: 400px;
     text-align-last: center;
 }
+
+ion-text{
+    text-align: center;
+}
+
+ion-buttons{
+    width: 400px;
+    text-align-last: center;
+}
+
+
