X axis on graphs locked at 7 elements.

--- a/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
@@ -16,23 +16,23 @@
     <ion-row>
     <ion-buttons color="#1E1E1E" lines="none">
       <ion-col>
-      <ion-button>
+      <ion-button (click)="displayPreviousWeek()">
         <ion-icon slot="start" name="chevron-back-outline" size="large"></ion-icon>
       </ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-text>{{workoutDates[0]}} - {{workoutDates[5]}}</ion-text>
+        <ion-text>{{previousWeekFormatted}} - {{rightsideWeekFormatted}}</ion-text>
       </ion-col>
 
       <ion-col>
-      <ion-button>
-        <ion-icon slot="end" name="chevron-forward-outline" size="large"></ion-icon>
-       </ion-button>
-      </ion-col>
-      </ion-buttons>
-    </ion-row>
-  </ion-grid>
+        <ion-button (click)="displayNextWeek()">
+          <ion-icon slot="end" name="chevron-forward-outline" size="large"></ion-icon>
+         </ion-button>
+        </ion-col>
+        </ion-buttons>
+      </ion-row>
+    </ion-grid>
 
   <ion-grid>
     <ion-row>
