--- a/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.html
@@ -12,17 +12,38 @@
       <canvas  id="MuscleGroupChart" >{{ chart }}</canvas>
   </div>
 
-  <!-- user date input goes here -->
+  <ion-grid style="border-bottom: 2px solid grey">
+    <ion-row>
+    <ion-buttons color="#1E1E1E" lines="none">
+      <ion-col>
+      <ion-button (click)="displayPreviousWeek()">
+        <ion-icon slot="start" name="chevron-back-outline" size="large"></ion-icon>
+      </ion-button>
+      </ion-col>
+
+      <ion-col>
+        <ion-text>{{previousWeekFormatted}} - {{rightsideWeekFormatted}}</ion-text>
+      </ion-col>
+
+      <ion-col>
+      <ion-button (click)="displayNextWeek()">
+        <ion-icon slot="end" name="chevron-forward-outline" size="large"></ion-icon>
+       </ion-button>
+      </ion-col>
+      </ion-buttons>
+    </ion-row>
+  </ion-grid>
+  
   <ion-grid>
     <ion-row>
-        <ion-item lines="none">
+        <ion-item lines="none" color="#1E1E1E">
           <ion-select 
           interface="popover" 
           placeholder="Select muscle group" 
           [(ngModel)]="selectedGroup"
           (ionChange)="updateChart()">
-            <div *ngFor="let muscle of musclegroups; let i = index">
-              <ion-select-option [value]="muscle">{{musclegroups[i]}}</ion-select-option> 
+            <div *ngFor="let muscle of musclegrouplist; let i = index">
+              <ion-select-option [value]="muscle">{{musclegrouplist[i]}}</ion-select-option> 
             </div>
           </ion-select>
         </ion-item>
