--- a/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.scss
@@ -2,3 +2,14 @@ ion-select{
     width: 400px;
     text-align-last: center;
 }
+
+ion-text{
+    text-align: center;
+}
+
+ion-buttons{
+    width: 400px;
+    text-align-last: center;
+}
+
+
