--- a/backend/webapp/templates/webapp/login.html
+++ b/backend/webapp/templates/webapp/login.html
@@ -44,7 +44,7 @@
                                         <div class="form-group">
                                             <input type="username" class="form-control form-control-user"
                                                 id="username" aria-describedby="usernameHelp"
-                                                placeholder="Enter Username Address...">
+                                                placeholder="Enter Username...">
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user"
