--- a/Frontend/Emoticoach/src/app/tabs/tabs.page.html
+++ b/Frontend/Emoticoach/src/app/tabs/tabs.page.html
@@ -17,5 +17,10 @@
       <ion-icon name="cloud-upload-sharp"></ion-icon>
       <ion-label>Sync</ion-label>
     </ion-tab-button> -->
+
+    <ion-tab-button tab="social">
+      <ion-icon name="chatbubble-ellipses-sharp"></ion-icon>
+      <ion-label>Gym Buddy</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
