--- a/Frontend/Emoticoach/src/app/pages/gym-buddy/friends-list/friends-list.component.html
+++ b/Frontend/Emoticoach/src/app/pages/gym-buddy/friends-list/friends-list.component.html
@@ -3,11 +3,12 @@
   <div class="loaded" *ngIf="loaded">
     <ion-item *ngFor="let f of searchList">
       <ion-thumbnail slot="start">
-        <ion-icon style="width: 100%; height: 100%" name="person-circle-sharp"></ion-icon>
+        <ion-img src="../../../../assets/user_icons/bear.png" alt="Bear cartoon profile img"></ion-img>
+        <!-- <ion-icon style="width: 100%; height: 100%" name="person-circle-sharp"></ion-icon> -->
       </ion-thumbnail>
       <ion-label>
         <h3>{{f.username}}</h3>
-        <p>Planet Fitness</p>
+        <p>{{ f.gym }}</p>
       </ion-label>
     </ion-item>
   </div>
