--- a/Frontend/Emoticoach/src/app/pages/gym-buddy/gym-buddy.page.html
+++ b/Frontend/Emoticoach/src/app/pages/gym-buddy/gym-buddy.page.html
@@ -38,22 +38,25 @@
 <ion-footer *ngIf="currentPage == 'feed'">
   <ion-toolbar color="light">
     <ion-grid>
-      <ion-row >
-        <ion-col size="10" >
-          <ion-row >
-            <ion-label>Tell Others Your Working Out Now!</ion-label>
+      <ion-row class="ion-align-items-center">
+        <ion-col size="2">
+
+        </ion-col>
+        <ion-col size="8">
+          <ion-row>
+            <ion-label>Tell Others Your Working Out!</ion-label>
           </ion-row>
           <ion-row>
-           
           </ion-row>
         </ion-col>
         <ion-col size="2">
-          <ion-button expand="block" fill="clear">
+          <ion-button (click)="modelSendMsg()" expand="block" fill="clear">
             <ion-icon name="send" slot="icon-only"></ion-icon>
           </ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
-    
   </ion-toolbar>
+
+
 </ion-footer>
