--- a/Frontend/Emoticoach/src/app/pages/gym-buddy/gym-buddy.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/gym-buddy/gym-buddy.page.scss
@@ -20,3 +20,10 @@ capacitor-google-map {
     width: 275px;
     height: 400px;
   }
+
+//   ion-col {
+//     background-color: #135d54;
+//     border: solid 1px #fff;
+//     color: #fff;
+//     text-align: center;
+//   }
