--- a/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.scss
@@ -22,7 +22,10 @@ ion-item-divider {
 ion-icon {
   font-size: 28px;
 }
-
+.big-icon {
+  height: 500px;
+  width: 500px;
+}
 ion-item {
   --inner-padding-end: 2px;
   --inner-padding-start: 2px;
